--- a/tables/corr_CRV.tex
+++ b/tables/corr_CRV.tex
@@ -1,12 +1,12 @@
 \begin{tabular}{@{}l*{9}{R{9.8mm}}@{}}
  & Binance & Bybit & OKX & Huobi & Gate & Bitget & dYdX & CoinEx & Contango \\
-Binance & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{D59180}} \color[HTML]{F1F1F1} 0.76 & {\cellcolor[HTML]{D89B8B}} \color[HTML]{F1F1F1} 0.72 & {\cellcolor[HTML]{D89B8B}} \color[HTML]{F1F1F1} 0.73 & {\cellcolor[HTML]{D5907E}} \color[HTML]{F1F1F1} 0.77 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{E2BCB3}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{E8CDC7}} \color[HTML]{000000} 0.56 & {\cellcolor[HTML]{558E9F}} \color[HTML]{F1F1F1} -0.17 \\
-Bybit & {\cellcolor[HTML]{D69584}} \color[HTML]{F1F1F1} 0.76 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{D99D8E}} \color[HTML]{000000} 0.71 & {\cellcolor[HTML]{D5907E}} \color[HTML]{F1F1F1} 0.77 & {\cellcolor[HTML]{D48D7C}} \color[HTML]{F1F1F1} 0.78 & {\cellcolor[HTML]{D69584}} \color[HTML]{F1F1F1} 0.76 & {\cellcolor[HTML]{E8CFC8}} \color[HTML]{000000} 0.53 & {\cellcolor[HTML]{EBDAD5}} \color[HTML]{000000} 0.52 & {\cellcolor[HTML]{428195}} \color[HTML]{F1F1F1} -0.24 \\
-OKX & {\cellcolor[HTML]{DAA091}} \color[HTML]{000000} 0.72 & {\cellcolor[HTML]{D99D8E}} \color[HTML]{000000} 0.71 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{DAA091}} \color[HTML]{000000} 0.71 & {\cellcolor[HTML]{D48C7A}} \color[HTML]{F1F1F1} 0.79 & {\cellcolor[HTML]{DAA091}} \color[HTML]{000000} 0.72 & {\cellcolor[HTML]{EAD6D1}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{E3C0B7}} \color[HTML]{000000} 0.61 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} -0.25 \\
-Huobi & {\cellcolor[HTML]{D89C8D}} \color[HTML]{F1F1F1} 0.73 & {\cellcolor[HTML]{D48D7C}} \color[HTML]{F1F1F1} 0.77 & {\cellcolor[HTML]{D89C8D}} \color[HTML]{F1F1F1} 0.71 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{CD7660}} \color[HTML]{F1F1F1} 0.87 & {\cellcolor[HTML]{D89C8D}} \color[HTML]{F1F1F1} 0.73 & {\cellcolor[HTML]{EDDEDB}} \color[HTML]{000000} 0.46 & {\cellcolor[HTML]{EBD8D4}} \color[HTML]{000000} 0.53 & {\cellcolor[HTML]{508A9C}} \color[HTML]{F1F1F1} -0.19 \\
-Gate & {\cellcolor[HTML]{D59281}} \color[HTML]{F1F1F1} 0.77 & {\cellcolor[HTML]{D38B79}} \color[HTML]{F1F1F1} 0.78 & {\cellcolor[HTML]{D38A77}} \color[HTML]{F1F1F1} 0.79 & {\cellcolor[HTML]{CD7660}} \color[HTML]{F1F1F1} 0.87 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{D59281}} \color[HTML]{F1F1F1} 0.77 & {\cellcolor[HTML]{EDDEDB}} \color[HTML]{000000} 0.46 & {\cellcolor[HTML]{E6C9C1}} \color[HTML]{000000} 0.58 & {\cellcolor[HTML]{4D889B}} \color[HTML]{F1F1F1} -0.20 \\
-Bitget & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{D59180}} \color[HTML]{F1F1F1} 0.76 & {\cellcolor[HTML]{D89B8B}} \color[HTML]{F1F1F1} 0.72 & {\cellcolor[HTML]{D89B8B}} \color[HTML]{F1F1F1} 0.73 & {\cellcolor[HTML]{D59180}} \color[HTML]{F1F1F1} 0.77 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{E3BEB4}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{E8CDC7}} \color[HTML]{000000} 0.56 & {\cellcolor[HTML]{548D9E}} \color[HTML]{F1F1F1} -0.17 \\
-dYdX & {\cellcolor[HTML]{E4C1B9}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{E8CDC7}} \color[HTML]{000000} 0.53 & {\cellcolor[HTML]{E9D4CE}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{EEE2DF}} \color[HTML]{000000} 0.46 & {\cellcolor[HTML]{EEE1DE}} \color[HTML]{000000} 0.46 & {\cellcolor[HTML]{E4C1B9}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{E0E8EA}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{468497}} \color[HTML]{F1F1F1} -0.22 \\
-CoinEx & {\cellcolor[HTML]{E6CAC3}} \color[HTML]{000000} 0.56 & {\cellcolor[HTML]{E8CFC8}} \color[HTML]{000000} 0.52 & {\cellcolor[HTML]{E0B6AC}} \color[HTML]{000000} 0.61 & {\cellcolor[HTML]{E9D1CB}} \color[HTML]{000000} 0.53 & {\cellcolor[HTML]{E4C2BA}} \color[HTML]{000000} 0.58 & {\cellcolor[HTML]{E6CAC3}} \color[HTML]{000000} 0.56 & {\cellcolor[HTML]{EEF1F2}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{5F94A4}} \color[HTML]{F1F1F1} -0.13 \\
-Contango & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} -0.17 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} -0.24 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} -0.25 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} -0.19 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} -0.20 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} -0.17 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} -0.22 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} -0.13 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 \\
+Binance & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FF9E9E}} \color[HTML]{000000} 0.76 & {\cellcolor[HTML]{FFA3A3}} \color[HTML]{000000} 0.72 & {\cellcolor[HTML]{FFA2A2}} \color[HTML]{000000} 0.73 & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.77 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFB2B2}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.56 & {\cellcolor[HTML]{EAEAFF}} \color[HTML]{000000} -0.17 \\
+Bybit & {\cellcolor[HTML]{FF9E9E}} \color[HTML]{000000} 0.76 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFA4A4}} \color[HTML]{000000} 0.71 & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.77 & {\cellcolor[HTML]{FF9B9B}} \color[HTML]{000000} 0.78 & {\cellcolor[HTML]{FF9E9E}} \color[HTML]{000000} 0.76 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.53 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.52 & {\cellcolor[HTML]{E0E0FF}} \color[HTML]{000000} -0.24 \\
+OKX & {\cellcolor[HTML]{FFA3A3}} \color[HTML]{000000} 0.72 & {\cellcolor[HTML]{FFA4A4}} \color[HTML]{000000} 0.71 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFA3A3}} \color[HTML]{000000} 0.71 & {\cellcolor[HTML]{FF9B9B}} \color[HTML]{000000} 0.79 & {\cellcolor[HTML]{FFA3A3}} \color[HTML]{000000} 0.72 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FFB0B0}} \color[HTML]{000000} 0.61 & {\cellcolor[HTML]{DEDEFF}} \color[HTML]{000000} -0.25 \\
+Huobi & {\cellcolor[HTML]{FFA2A2}} \color[HTML]{000000} 0.73 & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.77 & {\cellcolor[HTML]{FFA3A3}} \color[HTML]{000000} 0.71 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FF9090}} \color[HTML]{000000} 0.87 & {\cellcolor[HTML]{FFA2A2}} \color[HTML]{000000} 0.73 & {\cellcolor[HTML]{FFC3C3}} \color[HTML]{000000} 0.46 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.53 & {\cellcolor[HTML]{E6E6FF}} \color[HTML]{000000} -0.19 \\
+Gate & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.77 & {\cellcolor[HTML]{FF9B9B}} \color[HTML]{000000} 0.78 & {\cellcolor[HTML]{FF9B9B}} \color[HTML]{000000} 0.79 & {\cellcolor[HTML]{FF9090}} \color[HTML]{000000} 0.87 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.77 & {\cellcolor[HTML]{FFC3C3}} \color[HTML]{000000} 0.46 & {\cellcolor[HTML]{FFB4B4}} \color[HTML]{000000} 0.58 & {\cellcolor[HTML]{E6E6FF}} \color[HTML]{000000} -0.20 \\
+Bitget & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FF9E9E}} \color[HTML]{000000} 0.76 & {\cellcolor[HTML]{FFA3A3}} \color[HTML]{000000} 0.72 & {\cellcolor[HTML]{FFA2A2}} \color[HTML]{000000} 0.73 & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.77 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFB2B2}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.56 & {\cellcolor[HTML]{E8E8FF}} \color[HTML]{000000} -0.17 \\
+dYdX & {\cellcolor[HTML]{FFB2B2}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.53 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FFC3C3}} \color[HTML]{000000} 0.46 & {\cellcolor[HTML]{FFC3C3}} \color[HTML]{000000} 0.46 & {\cellcolor[HTML]{FFB2B2}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{E2E2FF}} \color[HTML]{000000} -0.22 \\
+CoinEx & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.56 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.52 & {\cellcolor[HTML]{FFB0B0}} \color[HTML]{000000} 0.61 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.53 & {\cellcolor[HTML]{FFB4B4}} \color[HTML]{000000} 0.58 & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.56 & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{EEEEFF}} \color[HTML]{000000} -0.13 \\
+Contango & {\cellcolor[HTML]{EAEAFF}} \color[HTML]{000000} -0.17 & {\cellcolor[HTML]{E0E0FF}} \color[HTML]{000000} -0.24 & {\cellcolor[HTML]{DEDEFF}} \color[HTML]{000000} -0.25 & {\cellcolor[HTML]{E6E6FF}} \color[HTML]{000000} -0.19 & {\cellcolor[HTML]{E6E6FF}} \color[HTML]{000000} -0.20 & {\cellcolor[HTML]{E8E8FF}} \color[HTML]{000000} -0.17 & {\cellcolor[HTML]{E2E2FF}} \color[HTML]{000000} -0.22 & {\cellcolor[HTML]{EEEEFF}} \color[HTML]{000000} -0.13 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 \\
 \end{tabular}
