--- a/tables/corr_ETH.tex
+++ b/tables/corr_ETH.tex
@@ -1,12 +1,12 @@
 \begin{tabular}{@{}l*{9}{R{9.8mm}}@{}}
  & Binance & Bybit & OKX & Huobi & Gate & Bitget & dYdX & CoinEx & Contango \\
-Binance & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{F1EDEC}} \color[HTML]{000000} 0.53 & {\cellcolor[HTML]{D9E3E7}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{A6C2CB}} \color[HTML]{000000} 0.19 & {\cellcolor[HTML]{8BB1BC}} \color[HTML]{F1F1F1} 0.21 & {\cellcolor[HTML]{CA6D55}} \color[HTML]{F1F1F1} 0.92 & {\cellcolor[HTML]{CAD9DE}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{72A0AF}} \color[HTML]{F1F1F1} 0.09 & {\cellcolor[HTML]{4E899B}} \color[HTML]{F1F1F1} -0.09 \\
-Bybit & {\cellcolor[HTML]{ECDCD8}} \color[HTML]{000000} 0.53 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{BDD1D8}} \color[HTML]{000000} 0.30 & {\cellcolor[HTML]{ABC6CE}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{80A9B6}} \color[HTML]{F1F1F1} 0.18 & {\cellcolor[HTML]{F0E8E7}} \color[HTML]{000000} 0.48 & {\cellcolor[HTML]{B9CFD5}} \color[HTML]{000000} 0.30 & {\cellcolor[HTML]{6B9CAB}} \color[HTML]{F1F1F1} 0.06 & {\cellcolor[HTML]{75A2B0}} \color[HTML]{F1F1F1} 0.03 \\
-OKX & {\cellcolor[HTML]{D9E3E7}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{A0BEC8}} \color[HTML]{000000} 0.30 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{E4EAED}} \color[HTML]{000000} 0.39 & {\cellcolor[HTML]{EEE3E1}} \color[HTML]{000000} 0.54 & {\cellcolor[HTML]{D4E0E4}} \color[HTML]{000000} 0.36 & {\cellcolor[HTML]{79A5B3}} \color[HTML]{F1F1F1} 0.11 & {\cellcolor[HTML]{DAE4E7}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{4E899B}} \color[HTML]{F1F1F1} -0.09 \\
-Huobi & {\cellcolor[HTML]{9BBBC5}} \color[HTML]{000000} 0.19 & {\cellcolor[HTML]{7FA8B6}} \color[HTML]{F1F1F1} 0.21 & {\cellcolor[HTML]{DAE4E7}} \color[HTML]{000000} 0.39 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{DDE6E9}} \color[HTML]{000000} 0.44 & {\cellcolor[HTML]{A2BFC9}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{689AAA}} \color[HTML]{F1F1F1} 0.06 & {\cellcolor[HTML]{C6D7DC}} \color[HTML]{000000} 0.34 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} -0.14 \\
-Gate & {\cellcolor[HTML]{A0BEC8}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{74A1B0}} \color[HTML]{F1F1F1} 0.18 & {\cellcolor[HTML]{EBD8D4}} \color[HTML]{000000} 0.54 & {\cellcolor[HTML]{F1EDEC}} \color[HTML]{000000} 0.44 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{A9C4CC}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{548D9E}} \color[HTML]{F1F1F1} -0.01 & {\cellcolor[HTML]{F2F1F1}} \color[HTML]{000000} 0.46 & {\cellcolor[HTML]{74A1B0}} \color[HTML]{F1F1F1} 0.03 \\
-Bitget & {\cellcolor[HTML]{CA6D55}} \color[HTML]{F1F1F1} 0.92 & {\cellcolor[HTML]{E3E9EC}} \color[HTML]{000000} 0.48 & {\cellcolor[HTML]{D2DFE3}} \color[HTML]{000000} 0.36 & {\cellcolor[HTML]{ABC6CE}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{92B5C0}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{C2D4DA}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{79A5B3}} \color[HTML]{F1F1F1} 0.11 & {\cellcolor[HTML]{4B879A}} \color[HTML]{F1F1F1} -0.10 \\
-dYdX & {\cellcolor[HTML]{CEDCE1}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{A0BEC8}} \color[HTML]{000000} 0.30 & {\cellcolor[HTML]{7FA8B6}} \color[HTML]{F1F1F1} 0.11 & {\cellcolor[HTML]{7CA7B4}} \color[HTML]{F1F1F1} 0.06 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} -0.01 & {\cellcolor[HTML]{C7D8DD}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{5B91A2}} \color[HTML]{F1F1F1} 0.01 & {\cellcolor[HTML]{548D9E}} \color[HTML]{F1F1F1} -0.07 \\
-CoinEx & {\cellcolor[HTML]{78A4B2}} \color[HTML]{F1F1F1} 0.09 & {\cellcolor[HTML]{498698}} \color[HTML]{F1F1F1} 0.06 & {\cellcolor[HTML]{DDE6E9}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{D2DFE3}} \color[HTML]{000000} 0.34 & {\cellcolor[HTML]{E4EAED}} \color[HTML]{000000} 0.46 & {\cellcolor[HTML]{80A9B6}} \color[HTML]{F1F1F1} 0.11 & {\cellcolor[HTML]{5990A1}} \color[HTML]{F1F1F1} 0.01 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{548D9E}} \color[HTML]{F1F1F1} -0.07 \\
-Contango & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} -0.09 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} 0.03 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} -0.09 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} -0.14 & {\cellcolor[HTML]{4B879A}} \color[HTML]{F1F1F1} 0.03 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} -0.10 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} -0.07 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} -0.07 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 \\
+Binance & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.53 & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{FFE6E6}} \color[HTML]{000000} 0.19 & {\cellcolor[HTML]{FFE3E3}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FF8A8A}} \color[HTML]{000000} 0.92 & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{FFF4F4}} \color[HTML]{000000} 0.09 & {\cellcolor[HTML]{F3F3FF}} \color[HTML]{000000} -0.09 \\
+Bybit & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.53 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFD8D8}} \color[HTML]{000000} 0.30 & {\cellcolor[HTML]{FFE4E4}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FFE8E8}} \color[HTML]{000000} 0.18 & {\cellcolor[HTML]{FFC2C2}} \color[HTML]{000000} 0.48 & {\cellcolor[HTML]{FFD8D8}} \color[HTML]{000000} 0.30 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.06 & {\cellcolor[HTML]{FFFBFB}} \color[HTML]{000000} 0.03 \\
+OKX & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{FFD8D8}} \color[HTML]{000000} 0.30 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.39 & {\cellcolor[HTML]{FFBABA}} \color[HTML]{000000} 0.54 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.36 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.11 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{F3F3FF}} \color[HTML]{000000} -0.09 \\
+Huobi & {\cellcolor[HTML]{FFE6E6}} \color[HTML]{000000} 0.19 & {\cellcolor[HTML]{FFE4E4}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.39 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.44 & {\cellcolor[HTML]{FFE4E4}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.06 & {\cellcolor[HTML]{FFD4D4}} \color[HTML]{000000} 0.34 & {\cellcolor[HTML]{ECECFF}} \color[HTML]{000000} -0.14 \\
+Gate & {\cellcolor[HTML]{FFE3E3}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FFE8E8}} \color[HTML]{000000} 0.18 & {\cellcolor[HTML]{FFBABA}} \color[HTML]{000000} 0.54 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.44 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FEFEFF}} \color[HTML]{000000} -0.01 & {\cellcolor[HTML]{FFC3C3}} \color[HTML]{000000} 0.46 & {\cellcolor[HTML]{FFFBFB}} \color[HTML]{000000} 0.03 \\
+Bitget & {\cellcolor[HTML]{FF8A8A}} \color[HTML]{000000} 0.92 & {\cellcolor[HTML]{FFC2C2}} \color[HTML]{000000} 0.48 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.36 & {\cellcolor[HTML]{FFE4E4}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.11 & {\cellcolor[HTML]{F2F2FF}} \color[HTML]{000000} -0.10 \\
+dYdX & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{FFD8D8}} \color[HTML]{000000} 0.30 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.11 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.06 & {\cellcolor[HTML]{FEFEFF}} \color[HTML]{000000} -0.01 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{F6F6FF}} \color[HTML]{000000} -0.07 \\
+CoinEx & {\cellcolor[HTML]{FFF4F4}} \color[HTML]{000000} 0.09 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.06 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{FFD4D4}} \color[HTML]{000000} 0.34 & {\cellcolor[HTML]{FFC3C3}} \color[HTML]{000000} 0.46 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.11 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{F6F6FF}} \color[HTML]{000000} -0.07 \\
+Contango & {\cellcolor[HTML]{F3F3FF}} \color[HTML]{000000} -0.09 & {\cellcolor[HTML]{FFFBFB}} \color[HTML]{000000} 0.03 & {\cellcolor[HTML]{F3F3FF}} \color[HTML]{000000} -0.09 & {\cellcolor[HTML]{ECECFF}} \color[HTML]{000000} -0.14 & {\cellcolor[HTML]{FFFBFB}} \color[HTML]{000000} 0.03 & {\cellcolor[HTML]{F2F2FF}} \color[HTML]{000000} -0.10 & {\cellcolor[HTML]{F6F6FF}} \color[HTML]{000000} -0.07 & {\cellcolor[HTML]{F6F6FF}} \color[HTML]{000000} -0.07 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 \\
 \end{tabular}
