--- a/tables/corr_LINK.tex
+++ b/tables/corr_LINK.tex
@@ -1,12 +1,12 @@
 \begin{tabular}{@{}l*{9}{R{9.8mm}}@{}}
  & Binance & Bybit & OKX & Huobi & Gate & Bitget & dYdX & CoinEx & Contango \\
-Binance & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{DAE4E7}} \color[HTML]{000000} 0.45 & {\cellcolor[HTML]{CAD9DE}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{6E9EAD}} \color[HTML]{F1F1F1} 0.07 & {\cellcolor[HTML]{B8CED5}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{C55B41}} \color[HTML]{F1F1F1} 0.98 & {\cellcolor[HTML]{BBCFD6}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{A6C2CB}} \color[HTML]{000000} 0.31 & {\cellcolor[HTML]{5990A1}} \color[HTML]{F1F1F1} 0.01 \\
-Bybit & {\cellcolor[HTML]{DDE6E9}} \color[HTML]{000000} 0.45 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{D6E1E5}} \color[HTML]{000000} 0.41 & {\cellcolor[HTML]{AEC7CF}} \color[HTML]{000000} 0.26 & {\cellcolor[HTML]{DCE5E8}} \color[HTML]{000000} 0.45 & {\cellcolor[HTML]{D9E3E7}} \color[HTML]{000000} 0.43 & {\cellcolor[HTML]{B4CBD2}} \color[HTML]{000000} 0.30 & {\cellcolor[HTML]{C8D8DE}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{5D93A4}} \color[HTML]{F1F1F1} 0.02 \\
-OKX & {\cellcolor[HTML]{C2D4DA}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{CDDBE0}} \color[HTML]{000000} 0.41 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{80A9B6}} \color[HTML]{F1F1F1} 0.12 & {\cellcolor[HTML]{AEC7CF}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{BBCFD6}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{9BBBC5}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{B8CED5}} \color[HTML]{000000} 0.36 & {\cellcolor[HTML]{4E899B}} \color[HTML]{F1F1F1} -0.03 \\
-Huobi & {\cellcolor[HTML]{548D9E}} \color[HTML]{F1F1F1} 0.07 & {\cellcolor[HTML]{96B8C2}} \color[HTML]{000000} 0.26 & {\cellcolor[HTML]{72A0AF}} \color[HTML]{F1F1F1} 0.12 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{7AA6B3}} \color[HTML]{F1F1F1} 0.18 & {\cellcolor[HTML]{558E9F}} \color[HTML]{F1F1F1} 0.06 & {\cellcolor[HTML]{6095A5}} \color[HTML]{F1F1F1} 0.06 & {\cellcolor[HTML]{6296A6}} \color[HTML]{F1F1F1} 0.12 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} -0.08 \\
-Gate & {\cellcolor[HTML]{B9CFD5}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{DAE4E7}} \color[HTML]{000000} 0.45 & {\cellcolor[HTML]{B8CED5}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{92B5C0}} \color[HTML]{000000} 0.18 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{BBCFD6}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{9ABAC4}} \color[HTML]{000000} 0.22 & {\cellcolor[HTML]{DAE4E7}} \color[HTML]{000000} 0.45 & {\cellcolor[HTML]{5C92A3}} \color[HTML]{F1F1F1} 0.01 \\
-Bitget & {\cellcolor[HTML]{C55B41}} \color[HTML]{F1F1F1} 0.98 & {\cellcolor[HTML]{D5E0E4}} \color[HTML]{000000} 0.43 & {\cellcolor[HTML]{C0D3D9}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{6D9DAC}} \color[HTML]{F1F1F1} 0.06 & {\cellcolor[HTML]{B8CED5}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{BBCFD6}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{9FBEC7}} \color[HTML]{000000} 0.29 & {\cellcolor[HTML]{588FA1}} \color[HTML]{F1F1F1} 0.00 \\
-dYdX & {\cellcolor[HTML]{AEC7CF}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{A3C0C9}} \color[HTML]{000000} 0.30 & {\cellcolor[HTML]{95B7C1}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{6A9BAA}} \color[HTML]{F1F1F1} 0.06 & {\cellcolor[HTML]{8AB0BB}} \color[HTML]{F1F1F1} 0.22 & {\cellcolor[HTML]{B0C8D0}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{85ADB9}} \color[HTML]{F1F1F1} 0.22 & {\cellcolor[HTML]{498698}} \color[HTML]{F1F1F1} -0.04 \\
-CoinEx & {\cellcolor[HTML]{AAC5CD}} \color[HTML]{000000} 0.31 & {\cellcolor[HTML]{CAD9DE}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{C4D6DB}} \color[HTML]{000000} 0.36 & {\cellcolor[HTML]{7FA8B6}} \color[HTML]{F1F1F1} 0.12 & {\cellcolor[HTML]{DCE5E8}} \color[HTML]{000000} 0.45 & {\cellcolor[HTML]{A5C1CA}} \color[HTML]{000000} 0.29 & {\cellcolor[HTML]{98B9C3}} \color[HTML]{000000} 0.22 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{5F94A4}} \color[HTML]{F1F1F1} 0.02 \\
-Contango & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} 0.01 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} 0.02 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} -0.03 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} -0.08 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} 0.01 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} 0.00 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} -0.04 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} 0.02 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 \\
+Binance & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.45 & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.07 & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{FF8282}} \color[HTML]{F1F1F1} 0.98 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{FFD8D8}} \color[HTML]{000000} 0.31 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 \\
+Bybit & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.45 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFCBCB}} \color[HTML]{000000} 0.41 & {\cellcolor[HTML]{FFDEDE}} \color[HTML]{000000} 0.26 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.45 & {\cellcolor[HTML]{FFC8C8}} \color[HTML]{000000} 0.43 & {\cellcolor[HTML]{FFD8D8}} \color[HTML]{000000} 0.30 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.02 \\
+OKX & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{FFCBCB}} \color[HTML]{000000} 0.41 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFF0F0}} \color[HTML]{000000} 0.12 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.36 & {\cellcolor[HTML]{FCFCFF}} \color[HTML]{000000} -0.03 \\
+Huobi & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.07 & {\cellcolor[HTML]{FFDEDE}} \color[HTML]{000000} 0.26 & {\cellcolor[HTML]{FFF0F0}} \color[HTML]{000000} 0.12 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFE8E8}} \color[HTML]{000000} 0.18 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.06 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.06 & {\cellcolor[HTML]{FFF0F0}} \color[HTML]{000000} 0.12 & {\cellcolor[HTML]{F6F6FF}} \color[HTML]{000000} -0.08 \\
+Gate & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.45 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{FFE8E8}} \color[HTML]{000000} 0.18 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.22 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.45 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 \\
+Bitget & {\cellcolor[HTML]{FF8282}} \color[HTML]{F1F1F1} 0.98 & {\cellcolor[HTML]{FFC8C8}} \color[HTML]{000000} 0.43 & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.06 & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{FFDBDB}} \color[HTML]{000000} 0.29 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.00 \\
+dYdX & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{FFD8D8}} \color[HTML]{000000} 0.30 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.06 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.22 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFE3E3}} \color[HTML]{000000} 0.22 & {\cellcolor[HTML]{FAFAFF}} \color[HTML]{000000} -0.04 \\
+CoinEx & {\cellcolor[HTML]{FFD8D8}} \color[HTML]{000000} 0.31 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.36 & {\cellcolor[HTML]{FFF0F0}} \color[HTML]{000000} 0.12 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.45 & {\cellcolor[HTML]{FFDBDB}} \color[HTML]{000000} 0.29 & {\cellcolor[HTML]{FFE3E3}} \color[HTML]{000000} 0.22 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.02 \\
+Contango & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.02 & {\cellcolor[HTML]{FCFCFF}} \color[HTML]{000000} -0.03 & {\cellcolor[HTML]{F6F6FF}} \color[HTML]{000000} -0.08 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.00 & {\cellcolor[HTML]{FAFAFF}} \color[HTML]{000000} -0.04 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.02 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 \\
 \end{tabular}
