--- a/tables/corr_MKR.tex
+++ b/tables/corr_MKR.tex
@@ -1,12 +1,12 @@
 \begin{tabular}{@{}l*{9}{R{9.8mm}}@{}}
  & Binance & Bybit & OKX & Huobi & Gate & Bitget & dYdX & CoinEx & Contango \\
-Binance & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{EBEFF0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{B7CDD4}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{6497A7}} \color[HTML]{F1F1F1} 0.05 & {\cellcolor[HTML]{B5CCD3}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{C4593E}} \color[HTML]{F1F1F1} 0.99 & {\cellcolor[HTML]{9BBBC5}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{B2CAD2}} \color[HTML]{000000} 0.34 & {\cellcolor[HTML]{578FA0}} \color[HTML]{F1F1F1} 0.06 \\
-Bybit & {\cellcolor[HTML]{E3E9EC}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{9FBEC7}} \color[HTML]{000000} 0.31 & {\cellcolor[HTML]{588FA1}} \color[HTML]{F1F1F1} 0.01 & {\cellcolor[HTML]{B4CBD2}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{E8EDEF}} \color[HTML]{000000} 0.50 & {\cellcolor[HTML]{B1C9D1}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{83ABB8}} \color[HTML]{F1F1F1} 0.21 & {\cellcolor[HTML]{478598}} \color[HTML]{F1F1F1} 0.02 \\
-OKX & {\cellcolor[HTML]{B7CDD4}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{AAC5CD}} \color[HTML]{000000} 0.31 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{6A9BAA}} \color[HTML]{F1F1F1} 0.07 & {\cellcolor[HTML]{A7C3CC}} \color[HTML]{000000} 0.29 & {\cellcolor[HTML]{B9CFD5}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{92B5C0}} \color[HTML]{000000} 0.19 & {\cellcolor[HTML]{B4CBD2}} \color[HTML]{000000} 0.34 & {\cellcolor[HTML]{528C9E}} \color[HTML]{F1F1F1} 0.05 \\
-Huobi & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} 0.05 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} 0.01 & {\cellcolor[HTML]{438295}} \color[HTML]{F1F1F1} 0.07 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{518B9D}} \color[HTML]{F1F1F1} 0.05 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} 0.04 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} -0.06 & {\cellcolor[HTML]{4D889B}} \color[HTML]{F1F1F1} 0.06 & {\cellcolor[HTML]{578FA0}} \color[HTML]{F1F1F1} 0.06 \\
-Gate & {\cellcolor[HTML]{A7C3CC}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{B0C8D0}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{98B9C3}} \color[HTML]{000000} 0.29 & {\cellcolor[HTML]{6397A7}} \color[HTML]{F1F1F1} 0.05 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{B1C9D1}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{75A2B0}} \color[HTML]{F1F1F1} 0.10 & {\cellcolor[HTML]{8FB3BE}} \color[HTML]{000000} 0.24 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} -0.00 \\
-Bitget & {\cellcolor[HTML]{C4593E}} \color[HTML]{F1F1F1} 0.99 & {\cellcolor[HTML]{ECF0F1}} \color[HTML]{000000} 0.50 & {\cellcolor[HTML]{B7CDD4}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{6296A6}} \color[HTML]{F1F1F1} 0.04 & {\cellcolor[HTML]{BCD0D7}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{9BBBC5}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{B1C9D1}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{558E9F}} \color[HTML]{F1F1F1} 0.06 \\
-dYdX & {\cellcolor[HTML]{7AA6B3}} \color[HTML]{F1F1F1} 0.21 & {\cellcolor[HTML]{9FBEC7}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{71A0AE}} \color[HTML]{F1F1F1} 0.19 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} -0.06 & {\cellcolor[HTML]{6397A7}} \color[HTML]{F1F1F1} 0.10 & {\cellcolor[HTML]{7FA8B6}} \color[HTML]{F1F1F1} 0.21 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{528C9E}} \color[HTML]{F1F1F1} 0.07 & {\cellcolor[HTML]{458396}} \color[HTML]{F1F1F1} 0.01 \\
-CoinEx & {\cellcolor[HTML]{A9C4CC}} \color[HTML]{000000} 0.34 & {\cellcolor[HTML]{83ABB8}} \color[HTML]{F1F1F1} 0.21 & {\cellcolor[HTML]{AAC5CD}} \color[HTML]{000000} 0.34 & {\cellcolor[HTML]{6698A8}} \color[HTML]{F1F1F1} 0.06 & {\cellcolor[HTML]{93B6C1}} \color[HTML]{000000} 0.24 & {\cellcolor[HTML]{A9C4CC}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{6A9BAA}} \color[HTML]{F1F1F1} 0.07 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{458396}} \color[HTML]{F1F1F1} 0.01 \\
-Contango & {\cellcolor[HTML]{428195}} \color[HTML]{F1F1F1} 0.06 & {\cellcolor[HTML]{428195}} \color[HTML]{F1F1F1} 0.02 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} 0.05 & {\cellcolor[HTML]{689AAA}} \color[HTML]{F1F1F1} 0.06 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} -0.00 & {\cellcolor[HTML]{468497}} \color[HTML]{F1F1F1} 0.06 & {\cellcolor[HTML]{588FA1}} \color[HTML]{F1F1F1} 0.01 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} 0.01 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 \\
+Binance & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.05 & {\cellcolor[HTML]{FFD4D4}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 0.99 & {\cellcolor[HTML]{FFE3E3}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FFD4D4}} \color[HTML]{000000} 0.34 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.06 \\
+Bybit & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.31 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.50 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFE4E4}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.02 \\
+OKX & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.31 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.07 & {\cellcolor[HTML]{FFDADA}} \color[HTML]{000000} 0.29 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{FFE6E6}} \color[HTML]{000000} 0.19 & {\cellcolor[HTML]{FFD3D3}} \color[HTML]{000000} 0.34 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.05 \\
+Huobi & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.05 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.07 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.05 & {\cellcolor[HTML]{FFFAFA}} \color[HTML]{000000} 0.04 & {\cellcolor[HTML]{F8F8FF}} \color[HTML]{000000} -0.06 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.06 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.06 \\
+Gate & {\cellcolor[HTML]{FFD4D4}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{FFDADA}} \color[HTML]{000000} 0.29 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.05 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.10 & {\cellcolor[HTML]{FFE0E0}} \color[HTML]{000000} 0.24 & {\cellcolor[HTML]{FEFEFF}} \color[HTML]{000000} -0.00 \\
+Bitget & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 0.99 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.50 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{FFFAFA}} \color[HTML]{000000} 0.04 & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFE3E3}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FFD4D4}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.06 \\
+dYdX & {\cellcolor[HTML]{FFE3E3}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFE6E6}} \color[HTML]{000000} 0.19 & {\cellcolor[HTML]{F8F8FF}} \color[HTML]{000000} -0.06 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.10 & {\cellcolor[HTML]{FFE3E3}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.07 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 \\
+CoinEx & {\cellcolor[HTML]{FFD4D4}} \color[HTML]{000000} 0.34 & {\cellcolor[HTML]{FFE4E4}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FFD3D3}} \color[HTML]{000000} 0.34 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.06 & {\cellcolor[HTML]{FFE0E0}} \color[HTML]{000000} 0.24 & {\cellcolor[HTML]{FFD4D4}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.07 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 \\
+Contango & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.06 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.02 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.05 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.06 & {\cellcolor[HTML]{FEFEFF}} \color[HTML]{000000} -0.00 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.06 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 \\
 \end{tabular}
