--- a/tables/corr_UNI.tex
+++ b/tables/corr_UNI.tex
@@ -1,12 +1,12 @@
 \begin{tabular}{@{}l*{9}{R{9.8mm}}@{}}
  & Binance & Bybit & OKX & Huobi & Gate & Bitget & dYdX & CoinEx & Contango \\
-Binance & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{F2F1F1}} \color[HTML]{000000} 0.48 & {\cellcolor[HTML]{CEDCE1}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{8EB2BE}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{76A3B1}} \color[HTML]{F1F1F1} 0.17 & {\cellcolor[HTML]{C45A3F}} \color[HTML]{F1F1F1} 0.98 & {\cellcolor[HTML]{BCD0D7}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{DCE5E8}} \color[HTML]{000000} 0.44 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} -0.08 \\
-Bybit & {\cellcolor[HTML]{F1EBE9}} \color[HTML]{000000} 0.48 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{D5E0E4}} \color[HTML]{000000} 0.41 & {\cellcolor[HTML]{6E9EAD}} \color[HTML]{F1F1F1} 0.15 & {\cellcolor[HTML]{9EBDC6}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{ECF0F1}} \color[HTML]{000000} 0.48 & {\cellcolor[HTML]{A6C2CB}} \color[HTML]{000000} 0.31 & {\cellcolor[HTML]{CDDBE0}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{4E899B}} \color[HTML]{F1F1F1} -0.04 \\
-OKX & {\cellcolor[HTML]{D8E2E6}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{D6E1E5}} \color[HTML]{000000} 0.41 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{6095A5}} \color[HTML]{F1F1F1} 0.11 & {\cellcolor[HTML]{7DA8B5}} \color[HTML]{F1F1F1} 0.19 & {\cellcolor[HTML]{C8D8DE}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{9CBCC6}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{CBDADF}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{508A9C}} \color[HTML]{F1F1F1} -0.03 \\
-Huobi & {\cellcolor[HTML]{A6C2CB}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{7CA7B4}} \color[HTML]{F1F1F1} 0.15 & {\cellcolor[HTML]{6D9DAC}} \color[HTML]{F1F1F1} 0.11 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} 0.01 & {\cellcolor[HTML]{98B9C3}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{689AAA}} \color[HTML]{F1F1F1} 0.14 & {\cellcolor[HTML]{5F94A4}} \color[HTML]{F1F1F1} 0.09 & {\cellcolor[HTML]{5F94A4}} \color[HTML]{F1F1F1} 0.02 \\
-Gate & {\cellcolor[HTML]{91B4BF}} \color[HTML]{000000} 0.17 & {\cellcolor[HTML]{A9C4CC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{8AB0BB}} \color[HTML]{F1F1F1} 0.19 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} 0.01 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{81AAB7}} \color[HTML]{F1F1F1} 0.17 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} 0.02 & {\cellcolor[HTML]{91B4BF}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{7CA7B4}} \color[HTML]{F1F1F1} 0.10 \\
-Bitget & {\cellcolor[HTML]{C45A3F}} \color[HTML]{F1F1F1} 0.98 & {\cellcolor[HTML]{EEF1F2}} \color[HTML]{000000} 0.48 & {\cellcolor[HTML]{C8D8DE}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{8EB2BE}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{76A3B1}} \color[HTML]{F1F1F1} 0.17 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{B9CFD5}} \color[HTML]{000000} 0.36 & {\cellcolor[HTML]{D6E1E5}} \color[HTML]{000000} 0.43 & {\cellcolor[HTML]{518B9D}} \color[HTML]{F1F1F1} -0.03 \\
-dYdX & {\cellcolor[HTML]{D2DFE3}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{B4CBD2}} \color[HTML]{000000} 0.31 & {\cellcolor[HTML]{AAC5CD}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{6B9CAB}} \color[HTML]{F1F1F1} 0.14 & {\cellcolor[HTML]{428195}} \color[HTML]{F1F1F1} 0.02 & {\cellcolor[HTML]{C4D6DB}} \color[HTML]{000000} 0.36 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{C0D3D9}} \color[HTML]{000000} 0.36 & {\cellcolor[HTML]{6095A5}} \color[HTML]{F1F1F1} 0.02 \\
-CoinEx & {\cellcolor[HTML]{EBEFF0}} \color[HTML]{000000} 0.44 & {\cellcolor[HTML]{D5E0E4}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{D1DEE2}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{5B91A2}} \color[HTML]{F1F1F1} 0.09 & {\cellcolor[HTML]{8EB2BE}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{DAE4E7}} \color[HTML]{000000} 0.43 & {\cellcolor[HTML]{BBCFD6}} \color[HTML]{000000} 0.36 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{5990A1}} \color[HTML]{F1F1F1} 0.00 \\
-Contango & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} -0.08 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} -0.04 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} -0.03 & {\cellcolor[HTML]{408094}} \color[HTML]{F1F1F1} 0.02 & {\cellcolor[HTML]{5F94A4}} \color[HTML]{F1F1F1} 0.10 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} -0.03 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} 0.02 & {\cellcolor[HTML]{3F7F93}} \color[HTML]{F1F1F1} 0.00 & {\cellcolor[HTML]{C3553A}} \color[HTML]{F1F1F1} 1.00 \\
+Binance & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFC2C2}} \color[HTML]{000000} 0.48 & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FFEAEA}} \color[HTML]{000000} 0.17 & {\cellcolor[HTML]{FF8282}} \color[HTML]{F1F1F1} 0.98 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.44 & {\cellcolor[HTML]{F4F4FF}} \color[HTML]{000000} -0.08 \\
+Bybit & {\cellcolor[HTML]{FFC2C2}} \color[HTML]{000000} 0.48 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFCBCB}} \color[HTML]{000000} 0.41 & {\cellcolor[HTML]{FFECEC}} \color[HTML]{000000} 0.15 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFC2C2}} \color[HTML]{000000} 0.48 & {\cellcolor[HTML]{FFD8D8}} \color[HTML]{000000} 0.31 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{FBFBFF}} \color[HTML]{000000} -0.04 \\
+OKX & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{FFCBCB}} \color[HTML]{000000} 0.41 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.11 & {\cellcolor[HTML]{FFE6E6}} \color[HTML]{000000} 0.19 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{FCFCFF}} \color[HTML]{000000} -0.03 \\
+Huobi & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FFECEC}} \color[HTML]{000000} 0.15 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.11 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FFEEEE}} \color[HTML]{000000} 0.14 & {\cellcolor[HTML]{FFF4F4}} \color[HTML]{000000} 0.09 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.02 \\
+Gate & {\cellcolor[HTML]{FFEAEA}} \color[HTML]{000000} 0.17 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFE6E6}} \color[HTML]{000000} 0.19 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFEAEA}} \color[HTML]{000000} 0.17 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.02 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.10 \\
+Bitget & {\cellcolor[HTML]{FF8282}} \color[HTML]{F1F1F1} 0.98 & {\cellcolor[HTML]{FFC2C2}} \color[HTML]{000000} 0.48 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FFEAEA}} \color[HTML]{000000} 0.17 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.36 & {\cellcolor[HTML]{FFC8C8}} \color[HTML]{000000} 0.43 & {\cellcolor[HTML]{FCFCFF}} \color[HTML]{000000} -0.03 \\
+dYdX & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{FFD8D8}} \color[HTML]{000000} 0.31 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFEEEE}} \color[HTML]{000000} 0.14 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.02 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.36 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.36 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.02 \\
+CoinEx & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.44 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{FFF4F4}} \color[HTML]{000000} 0.09 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FFC8C8}} \color[HTML]{000000} 0.43 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.36 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.00 \\
+Contango & {\cellcolor[HTML]{F4F4FF}} \color[HTML]{000000} -0.08 & {\cellcolor[HTML]{FBFBFF}} \color[HTML]{000000} -0.04 & {\cellcolor[HTML]{FCFCFF}} \color[HTML]{000000} -0.03 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.02 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.10 & {\cellcolor[HTML]{FCFCFF}} \color[HTML]{000000} -0.03 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.02 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.00 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 \\
 \end{tabular}
